# factory-game

./: Cargo.toml  tcr.sh
resources/: cards.toml
src/: card.rs  emission.rs  finance.rs  main.rs  math.rs  state.rs  tui.rs
