[workspace]

[package]
name = "faktori"
version = "0.1.0"
edition = "2024"
publish = false

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[lints.clippy]
diverging_sub_expression   = "allow"
items_after_statements     = "allow"
missing_errors_doc         = "allow"

[dependencies]
rand = { version = "0.9.0" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
